--- a/fbuinstagram/Base.lproj/Main.storyboard
+++ b/fbuinstagram/Base.lproj/Main.storyboard
@@ -259,7 +259,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pzo-ed-nCR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3582" y="135"/>
+            <point key="canvasLocation" x="3572" y="93"/>
         </scene>
         <!--Feed-->
         <scene sceneID="Agd-fn-RyG">
@@ -282,19 +282,12 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="529.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="screenname" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uqe-Ts-hMI">
-                                                    <rect key="frame" x="13" y="11" width="294" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l0E-4s-2SP">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l0E-4s-2SP" customClass="PFImageView">
                                                     <rect key="frame" x="8" y="6" width="50" height="50"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fia-zC-aQ9" customClass="PFImageView">
-                                                    <rect key="frame" x="13" y="34" width="348" height="348"/>
+                                                    <rect key="frame" x="8" y="64" width="348" height="348"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ah" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zcU-Q5-XLf">
@@ -308,6 +301,13 @@
                                                     <rect key="frame" x="16" y="486" width="345" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="screenname" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uqe-Ts-hMI">
+                                                    <rect key="frame" x="66" y="6" width="294" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -350,12 +350,12 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="zNF-0W-Xzz" id="nfg-x0-Ay7"/>
-                        <segue destination="vVY-g5-ZM7" kind="show" identifier="logoutSegue" id="byn-fW-4wh"/>
+                        <segue destination="n7V-pQ-hid" kind="show" identifier="logoutSegue" id="Etl-Ez-1ax"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R3x-Ff-wJh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5853.6000000000004" y="723.68815592203907"/>
+            <point key="canvasLocation" x="4433" y="1188"/>
         </scene>
         <!--New Post-->
         <scene sceneID="5MM-zv-30h">
@@ -401,7 +401,6 @@
                     <connections>
                         <outlet property="captionLabel" destination="blR-oA-XYB" id="F2a-hy-sgd"/>
                         <outlet property="picToUpload" destination="SGH-PP-n3F" id="yIo-GF-kpB"/>
-                        <segue destination="7Q2-oc-vYl" kind="show" identifier="cancelUpload" id="puP-i2-Y8f"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QCv-6o-6WI" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -411,7 +410,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="7522" y="724"/>
+            <point key="canvasLocation" x="6124" y="1188"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="FYm-Y9-XhW">
@@ -486,7 +485,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="6792.8000000000002" y="-456.52173913043481"/>
+            <point key="canvasLocation" x="5100" y="-168"/>
         </scene>
         <!--Details View Controller-->
         <scene sceneID="uC4-Ph-8kJ">
@@ -527,13 +526,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3yX-6d-Vu1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8028" y="-456.52173913043481"/>
+            <point key="canvasLocation" x="5854" y="-168"/>
         </scene>
         <!--Feed-->
         <scene sceneID="jhc-i4-sfe">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8VO-Um-Jjy" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Feed" id="5yR-sD-wh5"/>
+                    <tabBarItem key="tabBarItem" title="Feed" image="feed_tab" id="5yR-sD-wh5"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="o9l-hQ-bIf">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -546,7 +545,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tb9-G9-aSR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4993" y="724"/>
+            <point key="canvasLocation" x="3572" y="1188"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8UV-V9-kLN">
@@ -564,13 +563,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ae5-6F-qBM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6714" y="724"/>
+            <point key="canvasLocation" x="5287" y="1188"/>
         </scene>
         <!--Profile-->
         <scene sceneID="6V2-Ic-pBf">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Vrk-tm-kId" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Profile" id="s4S-P4-LHA"/>
+                    <tabBarItem key="tabBarItem" title="Profile" image="profile_tab" id="s4S-P4-LHA"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7fH-wc-c34">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -583,18 +582,18 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zyt-Ip-Jdz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5853.6000000000004" y="-457.42128935532236"/>
+            <point key="canvasLocation" x="4356" y="-167"/>
         </scene>
     </scenes>
     <resources>
+        <image name="feed_tab" width="25" height="25"/>
         <image name="image_placeholder" width="375" height="375"/>
         <image name="insta_camera_btn" width="25" height="25"/>
         <image name="instabrand" width="1200" height="429"/>
+        <image name="profile_tab" width="25" height="25"/>
         <image name="whiteinstabrand" width="1000" height="358"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Y4D-Ic-Rfl"/>
-        <segue reference="puP-i2-Y8f"/>
-        <segue reference="byn-fW-4wh"/>
+        <segue reference="Etl-Ez-1ax"/>
     </inferredMetricsTieBreakers>
 </document>
